@@ -1,3 +1,8 @@
+2006-09-28  Inge Wallin  <inge@lysator.liu.se>
+
+	* kchart_params.cc (loadOasisPlotarea): Add support for
+	chart:series-source (row or column):
+
 2006-08-11  Inge Wallin  <inge@lysator.liu.se>
 
 	Only show checkboxes in config dialog if applicable.
